--- a/Rest/Portfolio/portfolio.html
+++ b/Rest/Portfolio/portfolio.html
@@ -73,7 +73,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="inside">
-          <blockquote>Don’t cry because it’s over, smile because it happened.<small>Ludwig Jacobowski</small></blockquote>
+          <blockquote>Don&#8217;t cry because it&#8217;s over, smile because it happened.<small>Ludwig Jacobowski</small></blockquote>
           <p>Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie. Lorem Ipsum ist in der Industrie bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine Hand voll Wörter nahm und diese durcheinander warf um ein Musterbuch zu erstellen.</p>
         </div>
       </div>
